# ticketing-system

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
data/: .gitkeep
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/public/: batch_100_sample.json  batch_50_sample.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/analytics/: page.tsx
frontend/src/app/batch/: page.tsx
frontend/src/app/classify/: page.tsx
frontend/src/app/graph/: page.tsx
frontend/src/app/hitl/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/app/tickets/: page.tsx
frontend/src/components/classification/: ConfidenceExplainer.tsx  LiveQueryFeed.tsx
frontend/src/components/dashboard/: CategoryDistribution.tsx  ClassificationFlow.tsx  ConfidenceChart.tsx  DashboardStats.tsx  RecentTickets.tsx
frontend/src/components/layout/: Sidebar.tsx
scripts/: demo_hitl.py  deploy-azure.sh  generate_batch_dataset.py  generate_synthetic_data.py  generate_test_tickets.py  load_real_data.py  quick-deploy.sh  setup_databases.py  start.sh  test_api.py  vm-setup.sh
src/nexusflow/: __init__.py  cli.py  config.py
src/nexusflow/agents/: __init__.py  classification_agent.py  confidence.py
src/nexusflow/api/: __init__.py  main.py  websocket.py
src/nexusflow/api/routes/: __init__.py  analytics.py  batch.py  classification.py  graph.py  health.py  hitl.py  settings.py  tickets.py  users.py
src/nexusflow/db/: __init__.py  milvus_client.py  models.py  neo4j_client.py  repository.py  session.py
src/nexusflow/mcp/: __init__.py  server.py
src/nexusflow/models/: __init__.py  classification.py  hitl.py  ticket.py  user.py
src/nexusflow/observability/: __init__.py  phoenix.py
src/nexusflow/services/: __init__.py  batch.py  classification.py  embeddings.py  graph_evolution.py
tests/: __init__.py  conftest.py  test_confidence.py  test_models.py
